[package]
name = "_http"
version = "0.0.1"
edition = "2018"

[lib]
name = "_http"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.14"
features = ["tokio-runtime", "attributes"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]